// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Banner renders an item, highlighted 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ › Running: run-42                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Banner renders an item, not highlighted 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│   Running: run-42                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Banner renders the placeholder when there is no item 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│   Running: none                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
